feat(chell) + security: k3s cluster layer, k8s-pod scenario, security hardening, docs
## New Features

### chell/ — k3s Cluster Layer (OpenTofu Layer 3)
- OpenStack VM 叢集：master (固定 IP 192.168.200.10) + N worker nodes
- cloud-init 自動安裝 k3s server/agent，產生外部 kubeconfig (floating IP)
- Security Group：叢集內部全通 (remote_group_id) + SSH/API 6443 限 CIDR
- NodePort 30000-32767 對外開放供玩家連線 challenge
- 自動產生 ansible/inventory/k3s_hosts.ini 和 k3s_ids.yml

### ansible/scenarios/k8s-pod/ — Kubernetes Pod Scenario (Pulumi Go)
- 每位玩家建立獨立 Namespace + Pod + NodePort Service
- 資源隔離：ResourceQuota 限制 CPU/Memory，terminationGracePeriod=0
- skipAwait annotation：不等 Pod Ready 即回傳 NodePort 給玩家
- 動態 flag：MD5(baseFlag + identity)（非密碼學安全，僅 identifier 用途）

### ansible/roles/k3s/ — k3s Role
- 等待 k3s API 就緒 + 所有節點 Ready
- 從 master fetch kubeconfig → 部署到 CTFd server
- 建立 challenges namespace + ResourceQuota
- 重啟 chall-manager 以載入新 kubeconfig

### chall-manager — Scenario Pre-warming
- 透過 REST API 建立暫時 warmup challenge，強制觸發 OCI artifact cold pull
- 消除 CTFd admin 「創建題目」時的 10~30 秒 lazy pull 延遲
- 預熱後立即刪除 warmup challenge，保持 state 乾淨

## Security Fixes

- fix(gitignore): 加入 ansible/k3s-kubeconfig（CRITICAL：kubeconfig 含完整 k3s API 憑證）
- fix(gitignore): 加入 *kubeconfig* 萬用規則防止意外 commit
- fix(gitignore): 加入 k3s_hosts.ini, challenge_ids.yml, k3s_ids.yml
- fix(vault): vault.yml.example 強化安全警告，明確要求 ansible-vault 加密
- fix(docker-compose): 記錄 PULUMI_CONFIG_PASSPHRASE="" 的 state 未加密風險

## Documentation

- docs(README): 完整重寫，涵蓋三層部署、網路架構、安全注意事項、設計取捨
- docs(platform/main.tf): 加入職責說明、輸出用途、帳號層級注意事項
- docs(ctfd/main.tf): 修正錯誤 header，加入完整職責與安全提醒
- docs(chell/main.tf): 加入完整職責說明、port 用途、安全注意事項
- docs(k8s-pod/main.go): 加入模組級 doc comment、MD5 安全說明
- docs(server.yaml.tpl): 加入 k3s_token 日誌洩漏的安全說明和清理方法

## Other Changes

- feat(chall-manager): go build 加入 -ldflags="-s -w" -trimpath（縮小 binary，去除 debug info）
- fix(ctfd/versions.tf): provider 加入 tenant_name/user_name 確保帳號一致性
- fix(ansible/site.yml): 加入 k3s role play，支援多 inventory 部署

--- a/.gitignore
+++ b/.gitignore
@@ -15,16 +15,27 @@ override.tf.json
 # ── Go ────────────────────────────────────────────────────
 # 編譯好的 scenario binary（由 Ansible 在目標機建置，不進 git）
 ansible/scenarios/openstack-vm/main
+ansible/scenarios/k8s-pod/main
 
 # ── Ansible ───────────────────────────────────────────────
-# 主機清單（含真實 IP 與 SSH 金鑰路徑）
+# 主機清單（含真實 IP 與 SSH 金鑰路徑，由 tofu apply 自動產生）
 ansible/inventory/hosts.ini
+ansible/inventory/k3s_hosts.ini
 
-# Ansible Vault 實際檔案
+# ⚠️  SECURITY CRITICAL: k3s kubeconfig
+# 由 Ansible k3s role 從 master 節點 fetch 到本機
+# 此檔案持有者可對 k3s cluster 進行任意操作，絕對不得進入版本控制
+ansible/k3s-kubeconfig
+
+# ⚠️  SECURITY: Ansible Vault 實際憑證檔案
+# 必須以 ansible-vault encrypt 加密，嚴禁以明文 commit
 ansible/group_vars/all/vault.yml
 
 # 環境特定設定（UUID、IP、flag 等，因環境而異，不 commit）
 ansible/group_vars/all/challenge.yml
+# 由 tofu apply 自動產生（含 OpenStack 資源 UUID，屬環境特定資訊）
+ansible/group_vars/all/challenge_ids.yml
+ansible/group_vars/all/k3s_ids.yml
 
 # Ansible retry 紀錄
 *.retry
@@ -33,6 +44,9 @@ ansible/group_vars/all/challenge.yml
 *.pem
 *.key
 secrets/
+# kubeconfig 萬用保護（防止任何路徑的 kubeconfig 不小心被 commit）
+*kubeconfig*
+!*kubeconfig*.example
 
 # ── 系統 / 編輯器 ─────────────────────────────────────────
 .DS_Store
