--- a/ansible/roles/chall-manager/vars/main.yml
+++ b/ansible/roles/chall-manager/vars/main.yml
@@ -16,6 +16,9 @@ chall_manager_scenarios_dir: "/opt/chall-manager/scenarios"
 registry_port: 5000
 registry_host: "localhost"
 registry_url: "{{ registry_host }}:{{ registry_port }}"
+# ✅ chall-manager 容器內要用 Docker service name（不是 localhost）
+# localhost 在容器內指向容器本身，registry 是 docker-compose 定義的 service name
+registry_url_internal: "registry:{{ registry_port }}"
 
 # etcd image（官方版本，bitnami:3 已失效）
 etcd_image: "gcr.io/etcd-development/etcd:v3.5.13"
@@ -34,6 +37,7 @@ openstack_project_domain: "{{ vault_openstack_project_domain | default('Default'
 
 # oras CLI 版本（用來推送 OCI artifact 到 local registry）
 oras_version: "1.2.0"
+
 
 # ── 題目（Scenario）設定 ─────────────────────────────────────
 # 這些值定義在 defaults/main.yml（優先級低，可被 group_vars 覆蓋）
